--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,42 @@
-name: generate animation
+name: Generate Snake Animation 🐍
 
 on:
-  # run automatically every 24 hours
+  # Executa automaticamente a cada 24h
   schedule:
-    - cron: "0 */24 * * *" 
-  
-  # allows to manually run the job at any time
+    - cron: "0 */24 * * *"
+
+  # Permite executar manualmente no GitHub
   workflow_dispatch:
-  
-  # run on every push on the master branch
+
+  # Executa sempre que houver push na branch master
   push:
     branches:
-    - master
+      - master
 
 jobs:
   generate:
-    permissions: 
-      contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    permissions:
+      contents: write
 
     steps:
-      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
-      - name: generate github-contribution-grid-snake.svg
+      # Clona o repositório
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # Gera os arquivos SVG com a cobrinha animada
+      - name: Generate snake SVG
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
+          snake_color: '#00FF00'  # verde neon
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-          snake_color: '#00ff00' # 👈 AQUI você define a cor da cobrinha
 
-      # push the content of <build_dir> to a branch
-      - name: push github-contribution-grid-snake.svg to the output branch
+      # Publica os arquivos na branch `output`
+      - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
